# loar

./: .gitignore  AppSettings.cs  Cargo.toml  Program.cs  README-kr.md  README.md  build-release.sh  loar.csproj  loar.sln
.github/workflows/: release.yml
brew/: .brew  .gitignore  loar.rb  setup-brew.sh
scoop/: loar.json
scripts/: install.ps1  install.sh
snap/: .gitignore  setup-snap-dotnet.sh  snapcraft.nil.yaml  snapcraft.yaml  snapscraft.yaml
src/: archive.rs  config.rs  crypto.rs  db.rs  main.rs  scanner.rs
