[package]
name = "loar"
version = "1.0.49"
edition = "2024"
description = "A lightweight cross-platform CLI utility that safely backs up and archives local-only files"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.11"
console = "0.15"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
keyring = "4.1"
ignore = "0.4"
chrono = "0.4"
sha2 = "0.10"

[package.metadata.deb]
maintainer = "Thomas <thomas@loar.dev>"
section = "utils"
priority = "optional"
assets = [
    ["target/release/loar", "usr/bin/loar", "755"],
    ["README.md", "usr/share/doc/loar/README.md", "644"]
]
